--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
+    "d3": "^7.9.0",
+    "next": "14.1.3",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.3"
+    "react-bootstrap": "^2.10.1",
+    "react-dom": "^18"
   },
   "devDependencies": {
     "eslint": "^8",
